# VRCX-0

./: .gitattributes  .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  README.zh-Hant.md  components.json  lint-staged.config.mjs  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.typecheck.json  vite.config.js  vite.config.ts
.github/: FUNDING.yml  changelog-template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  package-linux-devtools.yml  package-preview.yml  pr-build.yml  release.yml  unit-test.yml
build-scripts/: create-tauri-updater-manifest.js  prepare-release-version.js
crates/host/: Cargo.toml
crates/i18n/: Cargo.toml
crates/runtime-host/: Cargo.toml
crates/runtime-host/src/: context.rs  lib.rs  log_watcher.rs  notification_delivery.rs  state.rs
crates/runtime-host/src/notification/: dispatcher.rs
crates/runtime-host/src/state/: mod.rs
crates/runtime-host/src/vr_overlay/: eligibility.rs  localization.rs  manager.rs  mod.rs  runtime.rs  service.rs
crates/runtime-host/src/vr_overlay/localization/: overlay_notifications.json
crates/runtime-host/src/vr_overlay/surfaces/: mod.rs  wrist.rs
crates/runtime-host/tests/: vr_overlay_manager.rs  vr_overlay_runtime.rs  vr_overlay_wrist_builder.rs
crates/vr-overlay/: Cargo.toml
scripts/: check-scoped-format.mjs  generate-native-locales.mjs
src/: main.ts  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app.rs  bindings_export.rs  bootstrap.rs  lib.rs  macos_menu.rs  single_instance_gate.rs  state.rs
src/app/: routes.tsx
src/components/: Location.jsx  LocationWorld.jsx  UserStatusAvatar.tsx  UserStatusDot.test.tsx  UserStatusDot.tsx
src/lib/: entityMedia.js  entityQueryCache.test.ts  entityQueryCache.ts  errorDisplay.js  overlay-titlebar.ts  useScrollViewportMetrics.ts
src/localization/: cs.json  en.json  es.json  fr.json  hu.json  index.js  ja.json  ko.json  languageCodes.json  locale-cases.json  locales.test.ts  locales.ts  pl.json  pt.json  ru.json  th.json  vi.json  zh-CN.json  zh-TW.json
src/platform/: index.ts
src/plugins/: ui.js
src/repositories/: activityPersistenceRepository.ts  activityRepository.ts  authRepository.ts  avatarLocalRepository.ts  avatarProfileRepository.ts  baseRepository.ts  communityThemeRepository.ts  configKeys.ts  configRepository.ts  databaseMaintenanceRepository.js  favoriteTransferRepository.ts  feedLocalRepository.ts  gameLogLocalRepository.ts  gameLogPersistenceRepository.ts  gameLogRepository.ts  groupProfileRepository.test.ts  groupProfileRepository.ts  index.ts  (+26 more)
(+703 files in other folders)
